1. Collection API Улучшения[#257395]