@@ -16,7 +16,7 @@ public class MatrixStreamTest {
                 {4, 5, 6},
                 {7, 8, 9}
         };
-        List<Integer> expected = Arrays.asList(
+        List<Integer> expected = List.of(
                 1, 2, 3, 4, 5, 6, 7, 8, 9
         );
         List<Integer> result = new MatrixStream().collect(input);
