@@ -11,13 +11,13 @@ import static org.junit.Assert.assertThat;
 public class ProfilesTest {
     @Test
     public void whenCollectAll() {
-        List<Profile> input = Arrays.asList(
+        List<Profile> input = List.of(
                 new Profile(new Address("NY", "street3", 1, 60)),
                 new Profile(new Address("Moscow", "street3", 1, 60)),
                 new Profile(new Address("Moscow", "street2", 1, 60)),
                 new Profile(new Address("Moscow", "street3", 1, 60))
         );
-        List<Address> expected = Arrays.asList(
+        List<Address> expected = List.of(
                 new Address("Moscow", "street3", 1, 60),
                 new Address("Moscow", "street2", 1, 60),
                 new Address("NY", "street3", 1, 60)
